syntax = "proto3";

package rpc;

service Rpc {
    rpc ReplicateGroup (ReplicateGroupRequest) returns (ReplicateGroupResponse);
    rpc ListGroups (ListGroupsRequest) returns (ListGroupsResponse);
    rpc RemoveGroup (RemoveGroupRequest) returns (RemoveGroupResponse);
}

message ReplicateGroupRequest {
    string group_id = 1;
}

message ReplicateGroupResponse {
    string status_message = 1;
}

message ListGroupsRequest {
    // No fields needed 
}

message ListGroupsResponse {
    repeated string group_ids = 1; 
}

message RemoveGroupRequest {
    string group_id = 1; 
}

message RemoveGroupResponse {
    string status_message = 1;
}
